--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background-color: #98C26C; /* Your green color */
       color: #333;
     }
     header {
@@ -18,10 +18,17 @@
       padding: 1.5rem 1rem;
       text-align: center;
     }
+    header img {
+      width: 120px;
+      height: auto;
+      margin-bottom: 1rem;
+    }
     .container {
       padding: 1.5rem;
       max-width: 800px;
       margin: auto;
+      background-color: white;
+      border-radius: 12px;
     }
     .section {
       margin-bottom: 2rem;
@@ -52,24 +59,17 @@
 </head>
 <body>
   <header>
+    <img src="Logo.jpg" alt="Company Logo" />
     <h1>Innovative Insulation Products, Inc.</h1>
     <p>High-Performance Solutions for Energy-Efficient Buildings</p>
   </header>
 
   <div class="container">
-    <div class="section">
-      <h2>About Us</h2>
-      <p>
-        Innovative Insulation Products, Inc. is dedicated to providing advanced insulation
-        materials designed to improve energy efficiency in residential and commercial structures.
-        Our innovative approach focuses on durability, sustainability, and superior thermal performance.
-      </p>
-    </div>
-
     <div class="section contact">
       <h2>Contact Us</h2>
+      <p><strong>Roger Pate</strong><br>Phone: 417-434-5555<br>Email: <a href="mailto:roger@iip.com">roger@iip.com</a></p>
       <p><strong>Mike Poshia</strong><br>Phone: 817-424-2992<br>Email: <a href="mailto:mike@iip.com">mike@iip.com</a></p>
-      <p><strong>Roger Patel</strong><br>Phone: 417-434-5555<br>Email: <a href="mailto:roger@iip.com">roger@iip.com</a></p>
+      <p><strong>Office</strong><br>Phone: (817) 424-2992</p>
     </div>
   </div>
 
