--- a/index.html
+++ b/index.html
@@ -2,58 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Innovative Insulation Products, Inc.</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background-color: #98C26C; /* Your green color */
-      color: #333;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f4f4;
     }
+
     header {
-      background-color: #004080;
+      background-color: #7BAE56; /* Green for header only */
       color: white;
-      padding: 1.5rem 1rem;
+      padding: 30px 20px;
       text-align: center;
     }
+
     header img {
-      width: 120px;
-      height: auto;
-      margin-bottom: 1rem;
+      max-height: 60px;
+      display: block;
+      margin: 0 auto 10px;
     }
-    .container {
-      padding: 1.5rem;
-      max-width: 800px;
-      margin: auto;
+
+    header h1 {
+      margin: 10px 0 5px;
+      font-size: 28px;
+    }
+
+    header p {
+      margin: 0;
+      font-size: 16px;
+    }
+
+    main {
+      max-width: 700px;
+      margin: 40px auto;
+      padding: 20px;
       background-color: white;
       border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
-    .section {
-      margin-bottom: 2rem;
+
+    .contact-box {
+      background-color: #f2f2f2;
+      border-radius: 10px;
+      padding: 20px;
     }
-    .section h2 {
+
+    .contact-box h2 {
       color: #004080;
     }
-    .contact {
-      background-color: #e0e0e0;
-      padding: 1rem;
-      border-radius: 8px;
+
+    .contact-box strong {
+      display: inline-block;
+      margin-top: 15px;
     }
-    .contact p {
-      margin: 0.3rem 0;
-    }
+
     footer {
       text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      background-color: #ddd;
+      padding: 15px;
+      background-color: #e0e0e0;
+      font-size: 14px;
+      margin-top: 40px;
+      color: #555;
     }
-    @media (max-width: 600px) {
-      .container {
-        padding: 1rem;
-      }
+
+    a {
+      color: #004080;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    /* Optional QR code styling */
+    .qr {
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    .qr img {
+      height: 120px;
+      width: 120px;
     }
   </style>
 </head>
@@ -64,17 +95,30 @@
     <p>High-Performance Solutions for Energy-Efficient Buildings</p>
   </header>
 
-  <div class="container">
-    <div class="section contact">
+  <main>
+    <div class="contact-box">
       <h2>Contact Us</h2>
-      <p><strong>Roger Pate</strong><br>Phone: 417-434-5555<br>Email: <a href="mailto:roger@iip.com">roger@iip.com</a></p>
-      <p><strong>Mike Poshia</strong><br>Phone: 817-424-2992<br>Email: <a href="mailto:mike@iip.com">mike@iip.com</a></p>
-      <p><strong>Office</strong><br>Phone: (817) 424-2992</p>
+
+      <strong>Roger Pate</strong><br>
+      Phone: 417-434-5555<br>
+      Email: <a href="mailto:roger@iip.com">roger@iip.com</a><br>
+
+      <strong>Mike Poshia</strong><br>
+      Phone: 817-424-2992<br>
+      Email: <a href="mailto:mike@iip.com">mike@iip.com</a><br>
+
+      <strong>Office</strong><br>
+      Phone: (817) 424-2992
     </div>
-  </div>
+
+    <div class="qr">
+      <p>Scan to save contact:</p>
+      <img src="qrcode.png" alt="vCard QR Code" />
+    </div>
+  </main>
 
   <footer>
-    &copy; 2025 Innovative Insulation Products, Inc.
+    © 2025 Innovative Insulation Products, Inc.
   </footer>
 </body>
 </html>
