--- a/index.html
+++ b/index.html
@@ -3,122 +3,128 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Innovative Insulation Products, Inc.</title>
+  <title>Contact Us - Innovative Insulation Products</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f4f4;
+      font-family: Arial, sans-serif;
+      background-color: #e5e5e5;
     }
 
-    header {
-      background-color: #7BAE56; /* Green for header only */
+    .header {
+      background-color: #7BAE56; /* Pleasant green */
       color: white;
-      padding: 30px 20px;
       text-align: center;
+      padding: 30px 20px 20px 20px;
     }
 
-    header img {
+    .header img {
       max-height: 60px;
       display: block;
       margin: 0 auto 10px;
     }
 
-    header h1 {
+    .header h1 {
       margin: 10px 0 5px;
       font-size: 28px;
     }
 
-    header p {
-      margin: 0;
+    .header p {
       font-size: 16px;
     }
 
-    main {
-      max-width: 700px;
+    .container {
+      max-width: 800px;
       margin: 40px auto;
-      padding: 20px;
       background-color: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-
-    .contact-box {
-      background-color: #f2f2f2;
       border-radius: 10px;
-      padding: 20px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      padding: 30px;
     }
 
-    .contact-box h2 {
-      color: #004080;
+    .contact-info h2 {
+      color: #2c3e50;
+      border-bottom: 2px solid #7BAE56;
+      padding-bottom: 10px;
+      margin-bottom: 20px;
     }
 
-    .contact-box strong {
-      display: inline-block;
-      margin-top: 15px;
+    .contact-entry {
+      margin-bottom: 20px;
     }
 
-    footer {
-      text-align: center;
-      padding: 15px;
-      background-color: #e0e0e0;
-      font-size: 14px;
-      margin-top: 40px;
-      color: #555;
+    .contact-entry strong {
+      font-size: 16px;
+      display: block;
+      margin-bottom: 5px;
     }
 
-    a {
-      color: #004080;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    /* Optional QR code styling */
     .qr {
       text-align: center;
       margin-top: 30px;
     }
 
-    .qr img {
-      height: 120px;
-      width: 120px;
+    .vcf-button {
+      display: inline-block;
+      padding: 12px 24px;
+      margin-top: 10px;
+      background-color: #7BAE56;
+      color: white;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+
+    .vcf-button:hover {
+      background-color: #689e4b;
+    }
+
+    .footer {
+      text-align: center;
+      font-size: 14px;
+      color: #777;
+      padding: 20px;
     }
   </style>
 </head>
 <body>
-  <header>
+  <div class="header">
     <img src="Logo.jpg" alt="Company Logo" />
     <h1>Innovative Insulation Products, Inc.</h1>
     <p>High-Performance Solutions for Energy-Efficient Buildings</p>
-  </header>
+  </div>
 
-  <main>
-    <div class="contact-box">
+  <div class="container">
+    <div class="contact-info">
       <h2>Contact Us</h2>
 
-      <strong>Roger Pate</strong><br>
-      Phone: 417-434-5555<br>
-      Email: <a href="mailto:roger@iip.com">roger@iip.com</a><br>
+      <div class="contact-entry">
+        <strong>Roger Pate</strong>
+        Phone: 417-434-5555<br />
+        Email: <a href="mailto:roger@iip.com">roger@iip.com</a>
+      </div>
 
-      <strong>Mike Poshia</strong><br>
-      Phone: 817-424-2992<br>
-      Email: <a href="mailto:mike@iip.com">mike@iip.com</a><br>
+      <div class="contact-entry">
+        <strong>Mike Poshia</strong>
+        Phone: 817-424-2992<br />
+        Email: <a href="mailto:mike@iip.com">mike@iip.com</a>
+      </div>
 
-      <strong>Office</strong><br>
-      Phone: (817) 424-2992
+      <div class="contact-entry">
+        <strong>Office</strong>
+        Phone: (817) 424-2992
+      </div>
     </div>
 
     <div class="qr">
-      <p>Scan to save contact:</p>
-      <img src="qrcode.png" alt="vCard QR Code" />
+      <p><strong>Download our contact card:</strong></p>
+      <a href="contact.vcf" download class="vcf-button">📇 Save vCard</a>
     </div>
-  </main>
+  </div>
 
-  <footer>
+  <div class="footer">
     © 2025 Innovative Insulation Products, Inc.
-  </footer>
+  </div>
 </body>
 </html>
