--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
 </head>
 <body>
   <div class="header">
-    <img src="Logo.jpg" alt="Company Logo" />
+    <img src="/Users/anviposhia/Desktop/iip/Logo.jpg" alt="Company Logo" />
     <h1>Innovative Insulation Products, Inc.</h1>
-    <p>High-Performance Solutions for Energy-Efficient Buildings</p>
   </div>
 
   <div class="container">
