--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <div class="qr">
       <p><strong>Download our contact card:</strong></p>
-      <a href="contacts.vcf" download class="button">Save Contacts</a>
+      <a href="contacts.vcf" download class="vcf-button">Save Contacts</a>
     </div>
   </div>
 
