--- a/index.html
+++ b/index.html
@@ -12,25 +12,15 @@
     }
 
     .header {
-      background-color: #7BAE56; /* Pleasant green */
+      background-color: #7BAE56;
       color: white;
       text-align: center;
       padding: 30px 20px 20px 20px;
     }
 
-    .header img {
-      max-height: 60px;
-      display: block;
-      margin: 0 auto 10px;
-    }
-
     .header h1 {
       margin: 10px 0 5px;
       font-size: 28px;
-    }
-
-    .header p {
-      font-size: 16px;
     }
 
     .container {
@@ -117,7 +107,7 @@
 
     <div class="qr">
       <p><strong>Download our contact card:</strong></p>
-      <a href="contacts.vcf" download class="vcf-button">Save Contacts</a>
+      <a href="contact.vcf" target="_blank" class="vcf-button">Open Contact Card</a>
     </div>
   </div>
 
