--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
       background-color: #7BAE56;
       color: white;
       text-align: center;
-      padding: 30px 20px 20px 20px;
+      padding: 30px 20px 10px;
     }
 
     .header h1 {
       margin: 10px 0 5px;
       font-size: 28px;
+    }
+
+    .header p {
+      margin: 5px 0 20px;
+      font-size: 16px;
+      font-style: italic;
     }
 
     .container {
@@ -47,6 +53,22 @@
       font-size: 16px;
       display: block;
       margin-bottom: 5px;
+    }
+
+    .info-section {
+      margin-top: 30px;
+    }
+
+    .info-section h3 {
+      color: #2c3e50;
+      margin-bottom: 10px;
+    }
+
+    .info-section p,
+    .info-section ul {
+      margin: 5px 0 15px;
+      font-size: 15px;
+      line-height: 1.6;
     }
 
     .qr {
@@ -81,6 +103,7 @@
 <body>
   <div class="header">
     <h1>Innovative Insulation Products, Inc.</h1>
+    <p>Proudly Made in USA For USA</p>
   </div>
 
   <div class="container">
@@ -90,19 +113,53 @@
       <div class="contact-entry">
         <strong>Roger Pate</strong>
         Phone: 417-434-5555<br />
-        Email: <a href="mailto:roger@iip.com">roger@iip.com</a>
+        Email: <a href="mailto:roger@iiptexas.com">roger@iiptexas.com</a>
       </div>
 
       <div class="contact-entry">
         <strong>Mike Poshia</strong>
         Phone: 817-424-2992<br />
-        Email: <a href="mailto:mike@iip.com">mike@iip.com</a>
+        Email: <a href="mailto:mike@iiptexas.com">mike@iiptexas.com</a>
       </div>
 
       <div class="contact-entry">
         <strong>Office</strong>
         Phone: (817) 424-2992
       </div>
+
+      <div class="contact-entry">
+        <strong>Website</strong>
+        <a href="https://www.iiptexas.com" target="_blank">www.iiptexas.com</a>
+      </div>
+
+      <div class="contact-entry">
+        <strong>Address</strong>
+        301 Graham Rd, Rhome, TX 76078
+      </div>
+    </div>
+
+    <div class="info-section">
+      <h3>Products We Make:</h3>
+      <ul>
+        <li>7-layer insulation air bubble films for diverse applications</li>
+      </ul>
+
+      <h3>Key Benefits:</h3>
+      <ul>
+        <li>Enhanced thermal performance</li>
+        <li>Customizable bubble diameters</li>
+        <li>High-quality, 7-layer construction</li>
+        <li>Suitable for various industries (construction, packaging, HVAC, etc.)</li>
+      </ul>
+
+      <h3>Other Products:</h3>
+      <ul>
+        <li>Radiant Barrier Films</li>
+        <li>Synthetic Underlayment Films</li>
+        <li>Paper Coating with PE</li>
+        <li>Metallized Polyester (Metpet) Coating with PE</li>
+        <li>Bare Foil Coating with PE</li>
+      </ul>
     </div>
 
     <div class="qr">
