--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
       <div class="contact-entry">
         <strong>Office</strong>
-        Phone: (817) 424-2992
+        Phone: 817-646-6100
       </div>
 
       <div class="contact-entry">
