--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background-color: #7BAE56;
       color: white;
       text-align: center;
-      padding: 30px 20px 10px;
+      padding: 30px 20px 20px 20px;
     }
 
     .header h1 {
@@ -24,9 +24,7 @@
     }
 
     .header p {
-      margin: 5px 0 20px;
       font-size: 16px;
-      font-style: italic;
     }
 
     .container {
@@ -55,20 +53,10 @@
       margin-bottom: 5px;
     }
 
-    .info-section {
-      margin-top: 30px;
-    }
-
-    .info-section h3 {
-      color: #2c3e50;
-      margin-bottom: 10px;
-    }
-
-    .info-section p,
-    .info-section ul {
-      margin: 5px 0 15px;
-      font-size: 15px;
-      line-height: 1.6;
+    .company-info {
+      margin-top: 40px;
+      padding-top: 20px;
+      border-top: 1px solid #ccc;
     }
 
     .qr {
@@ -124,47 +112,44 @@
 
       <div class="contact-entry">
         <strong>Office</strong>
-        Phone: 817-646-6100
-      </div>
-
-      <div class="contact-entry">
-        <strong>Website</strong>
-        <a href="https://www.iiptexas.com" target="_blank">www.iiptexas.com</a>
-      </div>
-
-      <div class="contact-entry">
-        <strong>Address</strong>
-        301 Graham Rd, Rhome, TX 76078
+        Phone: (817) 424-2992
       </div>
     </div>
 
-    <div class="info-section">
+    <div class="company-info">
+      <h3>Company Address:</h3>
+      <p>301 Graham Rd, Rhome, TX 76078</p>
+
+      <h3>Website:</h3>
+      <p><a href="https://www.iiptexas.com" target="_blank">www.iiptexas.com</a></p>
+
       <h3>Products We Make:</h3>
       <ul>
-        <li>7-layer insulation air bubble films for diverse applications</li>
-         <li>Radiant Barrier Films</li>
+        <li>7-layer insulation air bubble films that cater to diverse applications</li>
+        <li><strong>Key benefits:</strong>
+          <ul>
+            <li>Enhanced thermal performance</li>
+            <li>Customizable bubble diameters</li>
+            <li>High-quality, 7-layer construction</li>
+            <li>Suitable for various industries (construction, packaging, HVAC, etc.)</li>
+          </ul>
+        </li>
+        <li>Radiant Barrier Films</li>
         <li>Synthetic Underlayment Films</li>
         <li>Paper Coating with PE</li>
         <li>Metallized Polyester (Metpet) Coating with PE</li>
         <li>Bare Foil Coating with PE</li>
       </ul>
-
-      <h3>Key Benefits:</h3>
-      <ul>
-        <li>Enhanced thermal performance</li>
-        <li>Customizable bubble diameters</li>
-        <li>High-quality, 7-layer construction</li>
-        <li>Suitable for various industries (construction, packaging, HVAC, etc.)</li>
-      </ul>
+    </div>
 
     <div class="qr">
-      <p><strong>Download our contact card:</strong></p>
+      <p><strong>Open our contact card:</strong></p>
       <a href="contact.vcf" target="_blank" class="vcf-button">Open Contact Card</a>
     </div>
   </div>
 
   <div class="footer">
-    © 2025 Innovative Insulation Products, Inc.
+   Innovative Insulation Products, Inc.
   </div>
 </body>
 </html>
