--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
       <div class="contact-entry">
         <strong>Office</strong>
-        Phone: (817) 424-2992
+        Phone: 817-646-6100
       </div>
     </div>
 
